--- a/views/services/serviceDetail.ejs
+++ b/views/services/serviceDetail.ejs
@@ -150,12 +150,6 @@
         <input type="date" id="endDate" required />
         <label for="endTime">End Time:</label>
         <input type="time" id="endTime" required />
-        <input
-          type="number"
-          id="bookingBudget"
-          placeholder="Enter your budget"
-          required
-        />
         <button id="confirmDate">Request Booking</button>
         <button onclick="closemodel()">Cancel</button>
       </div>
@@ -186,14 +180,13 @@
       }
 
       async function requestBooking(serviceId, startDateTime, endDateTime) {
-        const budget = document.getElementById("bookingBudget").value;
         try {
           const response = await fetch(`/bookService/${serviceId}`, {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
             },
-            body: JSON.stringify({ startDateTime, endDateTime, budget }),
+            body: JSON.stringify({ startDateTime, endDateTime }),
           });
           const data = await response.json();
           if (data.success) {
