--- a/views/index.ejs
+++ b/views/index.ejs
@@ -159,8 +159,8 @@
       <a href="/" class="navbar-brand">EventEase</a>
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
       <ul class="navbar-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#shop" class="active">Services</a></li>
+        <li><a href="/">Home</a></li>
+        <!-- <li><a href="#shop" class="active">Services</a></li> -->
         <% if (user) { %>
         <li><a href="/myBookings">My Bookings</a></li>
         <div class="dropdown">
