--- a/views/user/previousBookings.ejs
+++ b/views/user/previousBookings.ejs
@@ -7,40 +7,23 @@
     <title>My Bookings</title>
   </head>
   <body>
-    <div class="navbar">
-      <div class="navbarleft">
-        <a href="/">Home</a>
-        <a href="/myBookings">My Bookings</a>
-        <a href="/previousBookings">Previous Bookings</a>
-      </div>
-      <div class="navbarright">
-        <div class="dropdown">
-          <button class="dropbtn"><i class="fa-solid fa-user"></i></button>
-          <div class="dropdown-content">
-            <a href="/account">Account</a>
-            <a href="/logout">Logout</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <h1>My Bookings</h1>
 
     <h2>Upcoming Bookings</h2>
-    <% if (upcomingBookings.length > 0) { %> <%
+    <% if (upcomingBookings && upcomingBookings.length > 0) { %> <%
     upcomingBookings.forEach(function(booking) { %>
     <div class="booking">
       <h3>
-        Provider: <%= booking.providerId ? booking.providerId.name : "Provider
-        not available" %>
+        Provider: <%= booking.providerId && booking.providerId.firmname ?
+        booking.providerId.firmname : "Provider not available" %>
       </h3>
       <p>
-        Event Start Date: <%= booking.eventDate.toDateString() %> at <%=
-        booking.eventDate.toLocaleTimeString() %>
+        Event Start Date: <%= booking.eventDate ? new
+        Date(booking.eventDate).toLocaleString() : 'Date not available' %>
       </p>
       <p>
-        Event End Date: <%= booking.endDate.toDateString() %> at <%=
-        booking.endDate.toLocaleTimeString() %>
+        Event End Date: <%= booking.endDate ? new
+        Date(booking.endDate).toLocaleString() : 'Date not available' %>
       </p>
       <p>Status: <%= booking.status %></p>
     </div>
@@ -49,20 +32,20 @@
     <% } %>
 
     <h2>Previous Bookings</h2>
-    <% if (previousBookings.length > 0) { %> <%
+    <% if (previousBookings && previousBookings.length > 0) { %> <%
     previousBookings.forEach(function(booking) { %>
     <div class="booking">
       <h3>
-        Provider: <%= booking.providerId ? booking.providerId.name : "Provider
-        not available" %>
+        Provider: <%= booking.providerId && booking.providerId.firmname ?
+        booking.providerId.firmname : "Provider not available" %>
       </h3>
       <p>
-        Event Start Date: <%= booking.eventDate.toDateString() %> at <%=
-        booking.eventDate.toLocaleTimeString() %>
+        Event Start Date: <%= booking.eventDate ? new
+        Date(booking.eventDate).toLocaleString() : 'Date not available' %>
       </p>
       <p>
-        Event End Date: <%= booking.endDate.toDateString() %> at <%=
-        booking.endDate.toLocaleTimeString() %>
+        Event End Date: <%= booking.endDate ? new
+        Date(booking.endDate).toLocaleString() : 'Date not available' %>
       </p>
       <p>Status: <%= booking.status %></p>
     </div>
